--- a/make.css
+++ b/make.css
@@ -1,14 +1,33 @@
+body, html {
+  width: 100%;
+  min-height: 100%;
+  padding: 0;
+  margin: 0;
+}
+
 body {
   background: white;
   display: flex;
-  /* flex flex etc */
+  flex-flow: row nowrap;
+  justify-content: center;
+  align-content: stretch;
+  margin: 0;
+  padding: 0;
 }
 
 #container {
   background: #00C1D9;
   max-width: 600px;
+  padding: 40px;
+  font-family: "Helvetica";
+  line-height: 1.8em;
+  box-sizing: border-box;
+  box-shadow: 0 3px 0 #008999;
+  border-radius: 4px;
+  margin-top: 25px;
+  margin-bottom: 25px;
 }
 
-
-
-
+h1 {
+  margin-top: 0;
+}
